setup depedency injection
